--- a/frontend/src/components/common/Avatar.module.scss
+++ b/frontend/src/components/common/Avatar.module.scss
@@ -9,4 +9,10 @@
   justify-content: center;
   align-items: center;
   text-transform: capitalize;
+  cursor: pointer;
+  transition: 0.2s all ease-in-out;
+  &:hover {
+    scale: 1.02;
+    filter: brightness(1.20);
+  }
 }
